<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:background="#fff">


<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/Entry"
        android:textColor="#000"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/name"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/Item"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:id="@+id/item"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/Amount"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:id="@+id/amount"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/System"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:id="@+id/system"/>
</TableRow>
</TableLayout>
