<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Personal_Information"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#fff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Shop Manager"
        android:textColor="#000"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/work_sans_bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
       ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Personal1"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fontFamily="@font/work_sans_bold"
        android:id="@+id/head"
        android:textColor="#000"
        android:layout_marginBottom="20dp"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/OwnerName"
        android:id="@+id/name"
        android:layout_marginBottom="10dp"
        ></EditText>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_bold"
        android:id="@+id/age"
        android:textColor="#000"
        android:text="@string/Age"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"></TextView>
    <Spinner
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/spinner"
        ></Spinner>

</LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/Business"
        android:id="@+id/business"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        ></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14dp"
        android:id="@+id/ask"
        android:textColor="#000"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        ></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="text"
        android:id="@+id/code"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        ></EditText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:text="@string/NEwB"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:textSize="12sp"
        android:id="@+id/newB"></Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/work_sans_bold"
        android:id="@+id/or"
        android:textColor="#000"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"></TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:text="@string/Old"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#fff"
        android:textSize="12sp"
        android:id="@+id/old"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:text="@string/Finish"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:textSize="16sp"
        android:id="@+id/fin"
        android:visibility="gone"></Button>


</LinearLayout>