<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowAll"
    android:background="#fff"
    android:padding="15dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool"
        android:elevation="50dp"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#F60000"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bus"
            android:textSize="18dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text=""
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date: 31 Januray 2021"
            android:layout_marginLeft="10dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:id="@+id/date"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="16dp"
        android:id="@+id/all"
        android:layout_marginTop="20dp"
       ></TextView>
    <TableLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lighGreen"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Entry"
                android:textColor="#fff"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Item"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Amount"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/System"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/insert"></androidx.recyclerview.widget.RecyclerView>


</LinearLayout>

    </LinearLayout>