<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context="com.ffta.shops.DailyExpense"
    android:background="#fff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool"
        android:elevation="50dp"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#F60000"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bus"
            android:textSize="18dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="ARSHB"
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date: 31 Januray 2021"
            android:layout_marginLeft="10dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:id="@+id/date"
            android:gravity="center"
            ></TextView>
                </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#fff"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"

        android:padding="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/total1"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total:3500Tk"
            android:textColor="#000"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/total"
            />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#fff"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"

            android:padding="30dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/paid"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paid: 3500Tk."
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:id="@+id/paid"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#fff"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"


        >
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/baki"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Baki:3500Tk"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/baki"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TableLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lighGreen"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Entry"
                android:textColor="#fff"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Item"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Amount"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/System"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Entry"
                android:textColor="#000"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Item"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/item"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Amount"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/amount"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/System"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/system"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Entry"
                android:textColor="#000"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/name1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Item"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/item1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/Amount"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/amount1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/System"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:id="@+id/system1"/>
        </TableRow>

    </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#000"
                android:text="@string/WatchAll"
                android:layout_marginTop="30dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_marginRight="10dp"
                android:id="@+id/watch"></Button>
            <Button
           android:layout_width="0dp"
                android:layout_weight="1"
           android:layout_height="wrap_content"
           android:background="#000"
           android:text="@string/New"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="30dp"
           android:textColor="#fff"
           android:textSize="14sp"
           android:id="@+id/New"></Button>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
